# Animation-Planning-in-Games-HW

./: LICENSE  README.md
HW1/: CMakeLists.txt  README.md
HW1-checkin/: README.md
HW1-checkin/cmake/Modules/: FindGLM.cmake
HW1-checkin/lib/assimp/code/: 3DSHelper.h  AssxmlExporter.cpp  BVHLoader.cpp  ColladaExporter.cpp  FBXConverter.cpp  FindInvalidDataProcess.cpp  TargetAnimation.cpp  XFileParser.cpp
HW1-checkin/lib/assimp/contrib/unzip/: unzip.c
HW1-checkin/lib/assimp/doc/: Doxyfile_Cmd
HW1-checkin/lib/assimp/port/dAssimp/assimp/: material.d
HW1-checkin/lib/assimp/port/jassimp/jassimp/src/jassimp/: AiConfigOptions.java  AiMaterial.java  AiNodeAnim.java  AiPostProcessSteps.java
HW1-checkin/lib/assimp/samples/DevIL/: ChangeLog
HW1-checkin/lib/assimp/test/models/X/: BCN_Epileptic.X
HW1-checkin/src/: app.hpp  global.hpp  item.cpp  main.cpp  mesh.cpp  mesh.hpp  option.hpp  scene.cpp  scene.hpp
HW1-checkin/src/item/: light_ball.cpp  light_ball.hpp
HW1-checkin/src/scene/: base_scene.hpp  bounce.hpp  empty.cpp  empty.hpp  particle.cpp  particle.hpp
HW1-checkin/src/shader/: base_shader.hpp  rectangle.cpp  text.cpp
HW1-checkin/src/shader/glsl/: cube_skybox.vs  lamp_shader.fs  lamp_shader.vs  simple_2d_particle.fs  text_shader.fs
HW1/lib/assimp/code/: 3DSConverter.cpp  3DSLoader.cpp  ASELoader.cpp  ColladaLoader.cpp  ConvertToLHProcess.cpp  IRRLoader.cpp  LWOAnimation.cpp  MDLLoader.cpp  OgreBinarySerializer.h  SMDLoader.cpp  ScenePreprocessor.cpp  ValidateDataStructure.cpp  XFileImporter.cpp
HW1/lib/assimp/port/dAssimp/assimp/: animation.d  config.d  postprocess.d
HW1/lib/assimp/port/jassimp/jassimp/src/jassimp/: AiAnimBehavior.java
HW1/lib/assimp/samples/SimpleAssimpViewX/English.lproj/: InfoPlist.strings
HW1/lib/assimp/samples/glut/: README-win32.txt
HW1/lib/assimp/test/models/X3D/: ComputerKeyboard.x3d
HW1/lib/assimp/tools/assimp_cmd/: WriteDumb.cpp
HW1/src/: app.cpp  app.hpp  camera.cpp  camera.hpp  character.cpp  config.h  config.hpp  glfw.cpp  glfw.hpp  item.cpp  item.hpp  main.cpp  option.hpp  particle.hpp  scene.cpp  scene.hpp
HW1/src/item/: light_ball.cpp  light_ball.hpp
HW1/src/particle_system/: geometry.cpp  geometry.hpp  simple_2d.cpp  simple_2d.hpp
HW1/src/scene/: base_scene.hpp  benchmark_scene.cpp  benchmark_scene.cu  benchmark_scene.hpp  bounce.cpp  bounce.hpp  empty.cpp  empty.hpp  empty_scene.cpp  empty_scene.hpp  fire_scene.cpp  fire_scene.hpp  fireworks_scene.cpp  fireworks_scene.hpp  galaxy_scene.cpp  galaxy_scene.cu  galaxy_scene.hpp  smoke_particle_scene.cpp  smoke_particle_scene.hpp  smoke_scene.cpp  smoke_scene.hpp  snow_scene.cpp  snow_scene.hpp  vertex_particle_scene.cpp  vertex_particle_scene.hpp  water_fountain_scene.cpp  water_fountain_scene.hpp
HW1/src/scene/impl/: benchmark_compute_shader_particle_system.hpp  benchmark_particle_update_fn.hpp  benchmark_simd_particle_system.hpp  benchmark_transform_feedback_particle_system.hpp
HW1/src/shader/: base_shader.cpp  base_shader.hpp  rectangle.cpp  skybox.cpp  skybox.hpp  text.cpp  text.hpp
HW1/src/shader/glsl/: cube_skybox.fs  cube_skybox.vs  lamp_shader.vs  scene_geo_shader.fs  scene_geo_shader.vs  scene_light_shader.fs  simple_2d_particle.vs  simple_particle.fs  text_shader.vs
HW1/src/util/: cuda.hpp  random.hpp
HW2/: CMakeLists.txt  README.md
HW2-checkin/: CMakeLists.txt
HW2-checkin/src/: app.cpp  character.hpp  glfw.cpp  item.hpp  particle.cpp  scene.cpp  scene.hpp
HW2-checkin/src/scene/: string_scene.cpp  string_scene.hpp
HW2-checkin/src/shader/glsl/: geometry_particle.gs  orth_rectangle_with_gaussian.fs
HW2-checkin/src/util/: cuda.hpp
HW2/src/: app.cpp  main.cpp  option.cpp
HW2/src/item/: floor.cpp  floor.hpp  light_ball.cpp  sphere.cpp  sphere.hpp
HW2/src/scene/: shallow_water_scene.cpp  shallow_water_scene.cu  shallow_water_scene.hpp  string_scene.cpp  string_scene.cu  string_scene.hpp
HW2/src/shader/glsl/: scene_geo_shader.vs  scene_light_shader.vs
HW2/src/util/: cuda.hpp
HW3/: CMakeLists.txt  README.md
HW3-checkin/: CMakeLists.txt
HW3-checkin/cmake/Modules/: FindGLM.cmake
HW3-checkin/src/: app.cpp  app.hpp  character.cpp  item.hpp  main.cpp  option.hpp  scene.cpp  scene.hpp
HW3-checkin/src/item/: pillar.cpp  pillar.hpp
HW3-checkin/src/scene/: roadmap_scene.cpp  roadmap_scene.hpp
HW3-checkin/src/shader/: rectangle.hpp
HW3-checkin/src/shader/glsl/: geometry_particle.vs  lamp_shader.fs  lamp_shader.vs  simple_phong.vs
HW3/src/: app.cpp  config.h  global.hpp  item.cpp  item.hpp  menu.cpp  menu.hpp  opengl.hpp  particle.hpp  scene.cpp  scene.hpp
HW3/src/item/: ball.cpp  ball.hpp  floor.cpp  pillar.cpp  pillar.hpp
HW3/src/scene/: base_scene.hpp  boids_scene.cpp  boids_scene.hpp  multi_agent_scene.cpp  multi_agent_scene.hpp  roadmap_scene.cpp  roadmap_scene.hpp
HW3/src/shader/glsl/: orth_rectangle_with_gaussian.vs  simple_phong.fs
HW3/src/util/: kd_tree.hpp  motion_planning.hpp
